--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -3,7 +3,7 @@ FROM python:latest as base
 RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
 
 ENV HOME="/root"
-ENV PATH="$HOME/.poetry/bin"
+ENV PATH="$HOME/.poetry/bin:$PATH"
 
 FROM base as dev
 
@@ -11,7 +11,7 @@ WORKDIR /code
 COPY pyproject.toml .
 COPY poetry.toml .
 
-RUN $HOME/.poetry/bin/poetry install --no-root
+RUN poetry install --no-root
 
 
 FROM dev as prod
