--- a/python/.devcontainer/devcontainer.json
+++ b/python/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
     "settings": {
         "python.linting.flake8Enabled": true,
         "python.linting.mypyEnabled": true,
-        "python.linting.enabled": true    
+        "python.linting.enabled": true,
+        "editor.rulers": [80, 120]	
     },
     "workspaceMount": "source=${localWorkspaceFolder},target=/code,type=bind,consistency=cached",
     "workspaceFolder": "/code",
